--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -149,7 +149,7 @@
 
           <div class="app-item-inner reviews-section">
 
-            <div class="header">Reviews</div>
+            <div class="header" id="reviews-header">Reviews</div>
 
             <div class="clearfix"></div>
 
@@ -265,31 +265,23 @@
 
 <template name="reviewFrame">
 
-  {{#unless isPhone}}
-    {{#if reviewGroups}}
-    <div class="review-frame">
-      <div class="prev-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-prev"><i class="icon-extra-l-angle"></i></div>
-      <div class="reviews">
-        <div class="owl-carousel">
-          {{#each reviewGroups}}
-            <div class="review-group">
-              {{#each this}}
-                {{> reviewBox this}}
-              {{/each}}
-            </div>
-          {{/each}}
-        </div>
-      </div>
-      <div class="next-button {{#unless extraReviews}}disabled{{/unless}}" data-action="reviews-next"><i class="icon-extra-r-angle"></i></div>
-    </div>
-    {{/if}}
-  {{else}}
+  {{#if isPhone}}
   <div class="reviews">
     {{#each reviews}}
       {{> reviewBox}}
     {{/each}}
   </div>
-  {{/unless}}
+  {{else}}
+  <div class="review-frame">
+    <div class="reviews">
+      {{#each reviewGroups}}
+        {{#each this}}
+        {{> reviewBox this}}
+        {{/each}}
+      {{/each}}
+    </div>
+  </div>
+  {{/if}}
 
 </template>
 
