Adjust review bar as needed
Refs #59

Pushing now so @neynah can build other changes on top. Further changes
will be needed before deploying.

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -119,6 +119,9 @@ $login-form-active-text: $topbar-item-active-bg;
 $banner-font-size: 2.9rem;
 $banner-font-color: #594590;
 
+$review-negative-color: #d8d8d8;
+$review-positive-color: #338956;
+
 // SIZING
 $button-border-radius: 0.5rem;
 
