--- a/app/client/templates/components/app-rating.html
+++ b/app/client/templates/components/app-rating.html
@@ -1,64 +1,40 @@
 <template name="appRating">
   {{#with aggregateReview}}
   <div class="app-rating-container">
-    {{#if ../simple}}
-      {{#if isNumber percentage.positive}}
-      <div class="ratings">
-        <div class="text">
-          <div class="labels">
-            <div class="amazing">{{numberFormat percentage.positive '0'}}%</div>
-            <i class="icon-extra-thumbs-up"></i>
-          </div>
-        </div>
-        <div class="bar">
-          <div class="background {{backgroundCol}}"></div>
-          <div class="fill">
-            <div class="job-done" style="width: {{percentage.positive}}%;"></div>
-          </div>
-        </div>
-      </div>
-      {{else}}
-      <div class="message table" data-action="rate-app">
-        <span>Be the first to rate</span>
-        <i class="icon-extra-thumbs-up purple"></i>
-        <i class="icon-extra-thumbs-down purple"></i>
-      </div>
-      {{/if}}
-    {{else}}
-      {{#unless isNumber percentage.jobDone}}
-        <div class="message" data-action="rate-app">
-          Be the first to rate this app
-        </div>
-        <i class="icon-extra-thumbs-up purple" data-action="rate-app"></i>
-        <i class="icon-extra-thumbs-down purple" data-action="rate-app"></i>
-      {{else}}
-        {{#if percentage.positive}}
+    {{#if isNumber percentage.positive}}
+    <div class="ratings">
+      <div class="text">
+        <div class="labels">
+          <div class="amazing">{{numberFormat percentage.positive '0'}}%</div>
           <i class="icon-extra-thumbs-up"></i>
-        {{/if}}
-        <div class="ratings">
-          <div class="text">
-            <div class="labels">
-              {{#if percentage.amazing}}<div class="amazing" style="width: {{percentage.amazing}}%;">{{numberFormat percentage.amazing '0'}}%</div>{{/if}}
-              {{#if percentage.jobDone}}<div class="job-done" style="width: {{percentage.jobDone}}%;">{{numberFormat percentage.jobDone '0'}}%</div>{{/if}}
-              {{#if percentage.didntLike}}<div class="didnt-like" style="width: {{percentage.didntLike}}%;">{{numberFormat percentage.didntLike '0'}}%</div>{{/if}}
-              {{#if percentage.broken}}<div class="broken" style="width: {{percentage.broken}}%;">{{numberFormat percentage.broken '0'}}%</div>{{/if}}
-            </div>
-          </div>
-          <div class="bar">
-            <div class="background {{backgroundCol}}"></div>
-            <div class="fill">
-              <div class="amazing" style="width: {{percentage.amazing}}%;"></div>
-              <div class="job-done" style="width: {{percentage.jobDone}}%;"></div>
-              <div class="didnt-like" style="width: {{percentage.didntLike}}%;"></div>
-              <div class="broken" style="width: {{percentage.broken}}%;"></div>
-            </div>
-          </div>
         </div>
-        {{#if percentage.negative}}
-          <i class="icon-extra-thumbs-down"></i>
-        {{/if}}
-      {{/unless}}
+      </div>
+      <div class="bar">
+        <div class="background {{backgroundCol}}"></div>
+        <div class="fill">
+          <div class="positive" style="width: {{percentage.positive}}%;"></div>
+        </div>
+      </div>
+    </div>
+    {{else}}
+    <div class="message table" data-action="rate-app">
+      <span>Be the first to rate</span>
+      <i class="icon-extra-thumbs-up purple"></i>
+      <i class="icon-extra-thumbs-down purple"></i>
+    </div>
     {{/if}}
+  </div>
+  {{/with}}
+</template>
+
+<template name="miniRating">
+  {{#with aggregateReview}}
+  <div class="app-mini-rating-container">
+    <div class="bar">
+      <div class="fill">
+        <div class="{{../colorClass}}" style="width: {{../percentage}}%;"></div>
+      </div>
+    </div>
   </div>
   {{/with}}
 </template>
