--- a/app/client/templates/components/app-rating.scss
+++ b/app/client/templates/components/app-rating.scss
@@ -1,3 +1,5 @@
+@import "../../stylesheets/variables";
+
 .app-item-inner {
 
   &.reviews-section {
@@ -37,7 +39,7 @@
 
       &.table {
         display: block;
-        
+
         &:hover {
           color: #924da7;
         }
@@ -105,7 +107,7 @@
         height: $bar-height;
 
         .background {
-          background-color: #ede9ee;
+          background-color: $review-negative-color;
           height: 100%;
           width: 100%;
           position: relative;
@@ -131,10 +133,7 @@
             display: inline-block;
           }
 
-          .broken { background-color: #db1a00; }
-          .didnt-like { background-color: #d8d8d8; }
-          .job-done { background-color: #41af00; }
-          .amazing { background-color: #005e1b; }
+          .positive { background-color: $review-positive-color; }
         }
 
       }
@@ -161,4 +160,37 @@
     }
   }
 
+}
+
+.app-mini-rating-container {
+  .bar {
+    $mini-bar-height: 0.8rem;
+    display: block;
+    position: relative;
+    z-index: 0;
+    height: $mini-bar-height;
+
+    .fill {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      top: 0;
+      bottom: 0;
+      font-size: 0;
+      height: $mini-bar-height;
+      line-height: 0;
+      > * {
+        position: relative;
+        height: 100%;
+        top: 0;
+        display: inline-block;
+      }
+      .positive {
+        background-color: $review-positive-color;
+      }
+      .negative {
+        background-color: $review-negative-color;
+      }
+    }
+  }
 }
