On hover for Submit Review, use same bgcolor as hover for Demo

--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -791,8 +791,8 @@ $app-container-padding-rl: 4.6rem;
       .button-block {
         text-align: right;
 
-        .sandstorm-button:hover {
-          background-color: #f4f4f4;
+        .sandstorm-button.primary:hover {
+          background-color: #9247a9;
         }
       }
     }
