Set the submit button to have margin-bottom 0.8rem;

--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -212,7 +212,7 @@
                 </div>
               </div>
             </div>
-            <div class="divider clearfix margin-top"></div>
+            <div class="divider clearfix"></div>
                 {{> reviewFrame reviews=reviews}}
           </div>
         </div>
