--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -790,6 +790,7 @@ $app-container-padding-rl: 4.6rem;
 
       .button-block {
         text-align: right;
+        margin-bottom: 0.8rem;
 
         .sandstorm-button.primary:hover {
           background-color: #9247a9;
