The thumbs-down in the review buttons, and the thumbs down in the list of reviews, should be #777777

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -120,6 +120,7 @@ $banner-font-size: 2.9rem;
 $banner-font-color: #594590;
 
 $review-negative-color: #d8d8d8;
+$review-negative-button-color: #777777;
 $review-positive-color: #338956;
 
 // SIZING
