--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -71,12 +71,15 @@ $app-container-padding-rl: 4.6rem;
       font-size: 3.1rem;
     }
 
-    .option {
+    .option-text {
 
       display: inline-block;
       vertical-align: bottom;
       font-size: 1.7rem;
-      cursor: pointer;
+
+      &.option {
+        cursor: pointer;
+      }
 
       *:not(.sandstorm-button) > i {
         font-size: 3.8rem;
