--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -212,7 +212,7 @@
               </div>
               <div class="review-entry-and-buttons">
                 <div>
-                  <textarea class="review-entry {{#unless writeReview}}hidden{{/unless}}" style="{{#unless writeReview or ratingsCount}}display: none;{{/unless}}" data-field="review-text">{{myReview.text}}</textarea>
+                  <textarea maxlength="500" class="review-entry {{#unless writeReview}}hidden{{/unless}}" style="{{#unless writeReview or ratingsCount}}display: none;{{/unless}}" data-field="review-text">{{myReview.text}}</textarea>
                 </div>
                 <div class="button-block">
                   <div class="sandstorm-button {{#if reviewValid}}primary{{else}}neutral submit{{/if}} {{#unless writeReview}}hidden{{/unless}}" data-action="{{#if reviewValid}}submit-review{{else}}review-tooltip{{/if}}">
