--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -769,6 +769,7 @@ $app-container-padding-rl: 4.6rem;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
 
     .review-breakdown {
       font-size: 1.5rem;
