Show "Loading..." when front page is loading

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -27,7 +27,13 @@
       {{!-- TEMPORARY: Show all apps, implemented the same as "featured apps" on front page until
             we have enough apps to break the front page down by genre. --}}
 
-      <div class="genre-name large">All Apps</div>
+      <div class="genre-name large">
+        {{#if stillWaitingOnApps}}
+        Loading...
+        {{else}}
+        All Apps
+        {{/if}}
+      </div>
 
       <div class="genre-other-section">
         {{> genreTableOther genre="All"}}
