Call it a productivity suite

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -5,9 +5,8 @@
     <div class="message">
 
       <div class="text">
-          <a href="https://sandstorm.io" target="blank"><strong>Sandstorm.io</strong></a> is an
-          <a href="https://github.com/sandstorm-io/sandstorm" target="blank"><strong>open source</strong></a> platform for
-          servers.
+        <a href="https://sandstorm.io" target="blank"><strong>Sandstorm</strong></a> is a
+        self-hostable web productivity suite.
       </div>
 
     </div>
