Switch background-size from cover to contain on screenshots and app icons
Fixes #105

--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -673,7 +673,7 @@ $app-container-padding-rl: 4.6rem;
         right: 0.6rem;
         left: 0.6rem;
         background-position: center;
-        background-size: cover;
+        background-size: contain;
         cursor: pointer;
 
       }
