Also do background no-repeat, now that we don't fill the screenshot area

--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -674,6 +674,7 @@ $app-container-padding-rl: 4.6rem;
         left: 0.6rem;
         background-position: center;
         background-size: contain;
+        background-repeat: no-repeat;
         cursor: pointer;
 
       }
