--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -136,8 +136,8 @@
         display: block;
         font-size: $app-install-font-size;
         font-weight: normal;
-        padding-top: $app-install-padding-tb;
-        padding-bottom: $app-install-padding-tb;
+        padding-top: 0.6rem;
+        padding-bottom: 0;
         padding-left: $app-install-padding-lr;
         padding-right: $app-install-padding-lr;
         min-width: 9rem;
