--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -23,8 +23,9 @@
   cursor: pointer;
   font-weight: 300;
   height: 4rem;
-  line-height: 3.1rem;
+  line-height: 3.5rem;
   font-size: 1.9rem;
+  margin: 0.4rem 0.2rem;
 
   i {
     color: $update-selector-button-icon;
