--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -118,7 +118,12 @@
 
   <div class="load-more"></div>
 
+  {{> genreTableOtherFinishedRendering tableFinishedRenderingReactiveVar=tableFinishedRenderingReactiveVar}}
+
   {{/if}}
   {{/if}}
 
+</template>
+
+<template name="genreTableOtherFinishedRendering">
 </template>
